@@ -56,7 +56,89 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|HashSet
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Set
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Callable
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CompletionService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorCompletionService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorService
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Future
 import|;
 end_import
 begin_import
@@ -355,6 +437,7 @@ name|MAX_RETRIES_ON_FORWARD
 decl_stmt|;
 DECL|field|allErrors
 specifier|private
+specifier|final
 name|List
 argument_list|<
 name|Error
@@ -368,14 +451,54 @@ argument_list|()
 decl_stmt|;
 DECL|field|errors
 specifier|private
+specifier|final
 name|List
 argument_list|<
 name|Error
 argument_list|>
 name|errors
 init|=
+name|Collections
+operator|.
+name|synchronizedList
+argument_list|(
 operator|new
 name|ArrayList
+argument_list|<
+name|Error
+argument_list|>
+argument_list|()
+argument_list|)
+decl_stmt|;
+DECL|field|updateExecutor
+specifier|private
+specifier|final
+name|ExecutorService
+name|updateExecutor
+decl_stmt|;
+DECL|field|completionService
+specifier|private
+specifier|final
+name|CompletionService
+argument_list|<
+name|Object
+argument_list|>
+name|completionService
+decl_stmt|;
+DECL|field|pending
+specifier|private
+specifier|final
+name|Set
+argument_list|<
+name|Future
+argument_list|<
+name|Object
+argument_list|>
+argument_list|>
+name|pending
+init|=
+operator|new
+name|HashSet
 argument_list|<>
 argument_list|()
 decl_stmt|;
@@ -400,12 +523,34 @@ name|UpdateShardHandler
 name|updateShardHandler
 parameter_list|)
 block|{
+name|this
+operator|.
 name|servers
 operator|=
 operator|new
 name|StreamingSolrServers
 argument_list|(
 name|updateShardHandler
+argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|updateExecutor
+operator|=
+name|updateShardHandler
+operator|.
+name|getUpdateExecutor
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|completionService
+operator|=
+operator|new
+name|ExecutorCompletionService
+argument_list|<>
+argument_list|(
+name|updateExecutor
 argument_list|)
 expr_stmt|;
 block|}
@@ -441,6 +586,24 @@ name|retryPause
 operator|=
 name|retryPause
 expr_stmt|;
+name|this
+operator|.
+name|updateExecutor
+operator|=
+name|servers
+operator|.
+name|getUpdateExecutor
+argument_list|()
+expr_stmt|;
+name|completionService
+operator|=
+operator|new
+name|ExecutorCompletionService
+argument_list|<>
+argument_list|(
+name|updateExecutor
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|finish
 specifier|public
@@ -450,12 +613,7 @@ parameter_list|()
 block|{
 try|try
 block|{
-name|servers
-operator|.
-name|blockUntilFinished
-argument_list|()
-expr_stmt|;
-name|doRetriesIfNeeded
+name|blockAndDoRetries
 argument_list|()
 expr_stmt|;
 block|}
@@ -823,6 +981,8 @@ argument_list|(
 name|err
 operator|.
 name|req
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -836,12 +996,7 @@ operator|>
 literal|0
 condition|)
 block|{
-name|servers
-operator|.
-name|blockUntilFinished
-argument_list|()
-expr_stmt|;
-name|doRetriesIfNeeded
+name|blockAndDoRetries
 argument_list|()
 expr_stmt|;
 block|}
@@ -975,6 +1130,8 @@ name|uReq
 argument_list|,
 name|sync
 argument_list|)
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -1133,6 +1290,8 @@ name|synchronous
 argument_list|,
 name|rrt
 argument_list|)
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 block|}
@@ -1158,12 +1317,7 @@ throws|throws
 name|IOException
 block|{
 comment|// we need to do any retries before commit...
-name|servers
-operator|.
-name|blockUntilFinished
-argument_list|()
-expr_stmt|;
-name|doRetriesIfNeeded
+name|blockAndDoRetries
 argument_list|()
 expr_stmt|;
 name|UpdateRequest
@@ -1222,9 +1376,98 @@ name|uReq
 argument_list|,
 literal|false
 argument_list|)
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+DECL|method|blockAndDoRetries
+specifier|private
+name|void
+name|blockAndDoRetries
+parameter_list|()
+block|{
+name|servers
+operator|.
+name|blockUntilFinished
+argument_list|()
+expr_stmt|;
+comment|// wait for any async commits to complete
+while|while
+condition|(
+name|pending
+operator|!=
+literal|null
+operator|&&
+name|pending
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+name|Future
+argument_list|<
+name|Object
+argument_list|>
+name|future
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|future
+operator|=
+name|completionService
+operator|.
+name|take
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|e
+parameter_list|)
+block|{
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+operator|.
+name|interrupt
+argument_list|()
+expr_stmt|;
+name|log
+operator|.
+name|error
+argument_list|(
+literal|"blockAndDoRetries interrupted"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|future
+operator|==
+literal|null
+condition|)
+break|break;
+name|pending
+operator|.
+name|remove
+argument_list|(
+name|future
+argument_list|)
+expr_stmt|;
+block|}
+name|doRetriesIfNeeded
+argument_list|()
+expr_stmt|;
 block|}
 DECL|method|addCommit
 name|void
@@ -1293,8 +1536,12 @@ specifier|private
 name|void
 name|submit
 parameter_list|(
+specifier|final
 name|Req
 name|req
+parameter_list|,
+name|boolean
+name|isCommit
 parameter_list|)
 block|{
 if|if
@@ -1304,12 +1551,7 @@ operator|.
 name|synchronous
 condition|)
 block|{
-name|servers
-operator|.
-name|blockUntilFinished
-argument_list|()
-expr_stmt|;
-name|doRetriesIfNeeded
+name|blockAndDoRetries
 argument_list|()
 expr_stmt|;
 name|HttpSolrServer
@@ -1427,6 +1669,71 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|isCommit
+condition|)
+block|{
+comment|// a commit using ConncurrentUpdateSolrServer is not async,
+comment|// so we make it async to prevent commits from happening
+comment|// serially across multiple nodes
+name|pending
+operator|.
+name|add
+argument_list|(
+name|completionService
+operator|.
+name|submit
+argument_list|(
+operator|new
+name|Callable
+argument_list|<
+name|Object
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|Object
+name|call
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doRequest
+argument_list|(
+name|req
+argument_list|)
+expr_stmt|;
+return|return
+literal|null
+return|;
+block|}
+block|}
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|doRequest
+argument_list|(
+name|req
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|doRequest
+specifier|private
+name|void
+name|doRequest
+parameter_list|(
+specifier|final
+name|Req
+name|req
+parameter_list|)
+block|{
 try|try
 block|{
 name|SolrServer
